fix: don't hide focused input elements on mobile

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,3 +1,8 @@
 #main-container {
   padding: 20px;
+  display: flex;
+}
+
+#main-container div {
+  margin: auto;
 }
